--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.5",
     "@prisma/client": "^5.17.0",
+    "@supabase/supabase-js": "^2.45.0",
+    "@types/uuid": "^10.0.0",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
